Fill out most of the pages

--- a/src/about/board.haml
+++ b/src/about/board.haml
@@ -1,1 +1,68 @@
-= partial "under_constrution"
+.container
+    .row
+        .span12#panel-main
+            .content
+                %h2 Our Board
+                .row
+                    .span12
+                        %ul.thumbnails
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 John Alexander
+                                        %small Board Chair, Head of School, Groves Academy
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Chancey	Anderson
+                                        %small Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Rick Campion
+                                        %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Kevin Cattoor
+                                        %small Treasurer, Founder, KC Consulting
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Kerry Givens
+                                        %small Executive Director, South Minneapolis YMCA
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Lidibette Rosado-Guzm&aacute;n
+                                        %small Diversity Coordinator, World Language Teacher Benilde-St. Margaret’s School
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Vidal Guzm&aacute;n
+                                        %small Senior Manager at Public Radio International
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Jill Johnson
+                                        %small Board Secretary, Senior Business Analyst, Target
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Neda Kellogg
+                                        %small Founder and CEO, Project Diva
+                            %li.span4
+                                .thumbnail
+                                    %img{:src => "http://placehold.it/260x170"}
+                                    .caption
+                                        %h4 Tara Stone
+                                        %small Community and Church Liaison, North Minneapolis
