--- a/src/about/history.haml
+++ b/src/about/history.haml
@@ -1,1 +1,30 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 Our History
+                %p
+                    Prodeo Academy was founded in 2011. Its founders, Rick Campion and Chancey Anderson, travelled across the country to study schools that were achieving exceptional results in order to bring back to Minnesota practices that have been proven successful. As experienced educators, they know that success in the classroom is a combination of many powerful factors and they designed a school to address each of those factors. Having worked at all levels of education, they were able to see what preparation for college looks like at every grade level. Their goal was to provide a place where
+                    %i all families have the same platform for future success.
+                %p Prodeo Academy opens its doors in 2013 with 3 kindergarten classrooms. The projected growth pattern is to add a new kindergarten class of 66 students each year until capacity is reached, with grades K-8.
+                %p.lead The unique foundations of Prodeo Academy:
+                %ul
+                    %li
+                        %b Careful planning:
+                        Prodeo Academy's leaders spent two years doing careful planning, visiting, completing internships, teaching in the highest performing charter schools across the country, as well as building relationships throughout North Minneapolis and the broader community.
+                    %li
+                        %b Best practices:
+                        Prodeo Academy uses the most effective, proven methods of teaching available. We have the freedom to implement only what works – no excuses.
+                    %li
+                        %b Partnerships:
+                        Prodeo Academy is designed with the partnership and support of a diverse array of collaborators and advisors, from pre-schools to churches to universities. (eventually add hyperlink to list of advisors, partners here)
+                    %li
+                        %b Achievement gap:
+                        The founders of Prodeo Academy are inspired to demonstrate that the achievement gap in Minneapolis does not have to be permanent. Every child, no matter what his or her income level, should have an education that provides him or her to truly succeed. They created a school in North Minneapolis that expects results from its students, teachers and families.
+                    %li
+                        %b Excellent teaching:
+                        Knowing that high quality teaching is the most important factor in reducing the achievement gap, Prodeo Academy aims to hire only teachers with experience in the highest performing schools, teachers who clearly understand how to help kids reach their academic potential.
