--- a/src/about/staff.haml
+++ b/src/about/staff.haml
@@ -1,1 +1,30 @@
-= partial "under_constrution"
+.container
+    .row
+        .span12#panel-main
+            .content
+                %h2 Our Staff
+                .row
+                    .span3
+                        .thumbnail
+                            %img{:src => "http://placehold.it/180x140"}
+                            .caption
+                                %h4 Rick Campion
+                                %p Executive Director
+                    .span9
+                        %p.lead Rick has experience in developing successful schools for children in Minneapolis. He was a member of the founding leadership team of Cristo Rey Jesuit High School in the Phillips neighborhood of South Minneapolis and the founding board of directors of Minneapolis College Preparatory. He has 14 years of experience as a teacher, and eight years in school administration.
+                        %p rickcampion@prodeoacademy.org
+                        %p (612) 559-4881
+                %br
+                .row
+                    .span9
+                        %p.lead Chancey has experience as a teacher in the Uncommon Schools Network at Excellence Boys Charter School in Bedford Stuyvesant, NY. She is completing a Master's Degree in early literacy at Columbia University. She has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level.
+                        %p chanceyanderson@prodeoacademy.org
+                        %p (347) 982-5061
+
+                    .span3
+                        .thumbnail
+                            %img{:src => "http://placehold.it/180x140"}
+                            .caption
+                                %h4 Chancey Anderson
+                                %p Principal
+                %br
