--- a/src/about/who_we_are.haml
+++ b/src/about/who_we_are.haml
@@ -1,1 +1,18 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 Who We Are
+                %p.lead Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values: Knowledge, Conscientiousness, Compassion, Integrity, and Respect.
+                %img.pull-right{:src => "http://placehold.it/350x125"}
+                %p Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.
+                %img.pull-left{:src => "http://placehold.it/250x100"}
+                %p
+                    At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:
+                    %i we strive to produce results that are among the highest performing schools in the country.
+                    Together with our families, we provide a structure and culture of success.
+                %p.lead We invite you to learn more about our inspiring community.
