--- a/src/approach/mission.haml
+++ b/src/approach/mission.haml
@@ -1,1 +1,19 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 The Prodeo Academy Mission
+                %p.center.lead
+                    %i
+                        Prodeo Academy is a college preparatory school
+                        %br
+                        that prepares students to be critical thinkers and
+                        %br
+                        intelligent leaders, expanding their opportunities to
+                        %br
+                        contribute positively and productively to society.
+
