--- a/src/contact/directions.haml
+++ b/src/contact/directions.haml
@@ -1,1 +1,10 @@
-= partial "under_constrution"
+.container
+    .row
+        .span12#panel-main
+            .content
+                %h2 Directions
+                .row
+                    .span12
+                        %iframe{:frameborder => "0", :height => "600", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=University+of+St.+Thomas,+Summit+Avenue,+Saint+Paul,+MN&aq=0&oq=university+of+st&sll=46.44186,-93.36129&sspn=14.674619,20.083008&t=m&ie=UTF8&hq=University+of+St.+Thomas,+Summit+Avenue,+Saint+Paul,+MN&ll=44.939838,-93.194785&spn=0.006295,0.006295&output=embed", :width => "940"}
+                        %br
+                        %br
