--- a/src/contact/volunteer.haml
+++ b/src/contact/volunteer.haml
@@ -1,1 +1,11 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 Volunteer
+                %p.lead If you are inspired by our mission to close the achievement gap and create a culture of learning and support, we would love to hear about it.
+                %p.lead If you have time and talent to share, please contact us at:
