--- a/src/results/achievement_gap.haml
+++ b/src/results/achievement_gap.haml
@@ -1,1 +1,27 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Did you know?
+                %p.lead The achievement gap in Minnesota is one of the largest in the nation.
+                %p.lead Prodeo Academy is committed to closing it for our students.
+        .span8#panel-right
+            .content
+                %h2 Achievement Gap
+                %p.lead At Prodeo Academy, we are creating a culture and learning environment that addresses the five gaps that lead to underachievement, as identified by the African American Leadership Forum.
+
+                %p.lead The Preparation Gap:
+                %p Prodeo Academy partners with parents from their first day of school, ensuring readiness to learn at every stage.
+
+                %p.lead The Belief Gap:
+                %p Prodeo Academy is focused on exceptional results that we know our students can achieve. We are committed to a culture of high expectations for students and staff, with accountability and support built in to every step of a child’s education.
+
+                %p.lead The Time Gap:
+                %p Prodeo has an extended school day and year. We partner with organizations to offer after-school and summer programming. Individualized learning is built into the curriculum for every student, maximizing each school day to its fullest.
+
+                %p.lead The Teaching Gap:
+                %p Our teachers are experienced professionals who have demonstrated success in helping students reach their full potential. Our teachers are fully committed to the shared values of the school and will hold themselves accountable for student achievement.
+
+                %p.lead The Leadership Gap:
+                %p Our leaders have travelled across the country and they are bringing best practices in high performing schools to Prodeo Academy. They have experience in school leadership, curriculum development, teacher coaching, fundraising, and most importantly, academic results.
+
