--- a/src/student_life/academics.haml
+++ b/src/student_life/academics.haml
@@ -1,1 +1,18 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 A Typical Day
+                %p.lead Prodeo Academy is committed to providing a meaningful, individualized, joyful learning experience for every student.
+                %p The center of a Prodeo Academy education is a rigorous college preparatory curriculum, with high expectations for all students and the support to help them meet those expectations. Based on proven, successful methods of teaching at some of the highest performing schools in the country, the curriculum at Prodeo Academy will prepare each child for college beginning on the first day of kindergarten.
+                %p Prodeo Academy uses research-based, proven curriculum – and we measure the results every step of the way. The following programs are part of the core curriculum at Prodeo Academy:
+                %p.lead  Focus on Literacy and Numeracy
+                %p The ability to read well and understand mathematics are the most important factors in a students' success in school.
+                %p At Prodeo Academy, we emphasize these two disciplines. Every one of our students has over 90 minutes of language arts instruction (phonics, reading comprehension, and vocabulary) daily. Our students also have over 90 minutes of math instruction each day. Social studies and science are also important components of our curriculum.
+                %p Our involvement of tutors gives students and teachers the opportunity to use small groups to master distinct skills in reading, writing, arithmetic, and problem-solving.
+                %p Our literacy curriculum builds strong readers who love to read and pursue reading independently outside of school.
+                %p Our mathematics curriculum builds students who use math in their everyday lives and feel at home in an increasingly technological world.
