--- a/src/about/partners.haml
+++ b/src/about/partners.haml
@@ -1,1 +1,10 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 Our Partners
+                %p.lead Prodeo Academy has active partnerships with many organizations in Minneapolis and high performing schools across the country. We are always interested in exploring new partnerships. We work to ensure that all the pieces are in place for kids to succeed, both inside and outside of school.
