--- a/src/contact/apply_to_teach.haml
+++ b/src/contact/apply_to_teach.haml
@@ -1,1 +1,14 @@
-= partial "under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        .span8#panel-right
+            .content
+                %h2 Apply to Teach
+                %p.lead
+                    If you are a qualified teacher who would like to join our inspiring, engaged and results-driven community, we invite you to contact Chancey Anderson, Principal.
+                    %br
+                    %br
+                    %a{:href => "mailto:chanceyanderson@prodeoacademy.org"} chanceyanderson@prodeoacademy.org
