--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -12,14 +12,14 @@
                                 %p Executive Director
                     .span9
                         %p.lead Rick has experience in developing successful schools for children in Minneapolis. He was a member of the founding leadership team of Cristo Rey Jesuit High School in the Phillips neighborhood of South Minneapolis and the founding board of directors of Minneapolis College Preparatory. He has 14 years of experience as a teacher, and eight years in school administration.
-                        %p rickcampion@prodeoacademy.org
-                        %p (612) 559-4881
+                        %p.text-info rickcampion@prodeoacademy.org
+                        %p.text-info (612) 559-4881
                 %br
                 .row
                     .span9
-                        %p.lead Chancey has experience as a teacher in the Uncommon Schools Network at Excellence Boys Charter School in Bedford Stuyvesant, NY. She is completing a Master's Degree in early literacy at Columbia University. She has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level.
-                        %p chanceyanderson@prodeoacademy.org
-                        %p (347) 982-5061
+                        %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She also has her Master Degree as a Literacy Specialist from Columbia University.
+                        %p.text-info chanceyanderson@prodeoacademy.org
+                        %p.text-info (347) 982-5061
 
                     .span3
                         .thumbnail
@@ -27,4 +27,14 @@
                             .caption
                                 %h4 Chancey Anderson
                                 %p Principal
+                %br
+                .row
+                    .span3
+                        .thumbnail
+                            %img{:src => "http://placehold.it/180x140"}
+                            .caption
+                                %h4 Rachel Hemsey
+                                %p Founding Teacher
+                    .span9
+                        %p.lead Rachel comes to Prodeo Academy from Excellence Boys Charter School of the Uncommon Schools Network. She started her career as a Teach for America Corps member. Her experience includes Lead Fourth Grade Teacher, Summer Academy Director, Kindergarten Grade Team Chair, and Lead Kindergarten Teacher. Rachel has a B.S. with Distinction from the University of Minnesota and an M.S. with Distinction from Hunter College in New York City.
                 %br
