--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -2,8 +2,11 @@
     .row
         .span4#panel-left
             .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                %h3 Title?
+                %img{:src => "//placehold.it/275x75"}
+                %br
+                %br
+                %img{:src => "//placehold.it/275x175"}
         .span8#panel-right
             .content
                 %h2 Apply to Tutor
@@ -14,4 +17,7 @@
                     If you are interested in becoming a tutor at Prodeo Academy, we invite you to contact Chancey Anderson, Principal.
                     %br
                     %br
-                    %a{:href => "mailto:chanceyanderson@prodeoacademy.org"} chanceyanderson@prodeoacademy.org
+                    %p
+                        %b Chancy Anderson, Principal
+                    %p.text-info chanceyanderson@prodeoacademy.org
+                    %p.text-info (347) 982-5061
