--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -2,67 +2,71 @@
     .row
         .span12#panel-main
             .content
-                %h2 Our Board
+                %h2 Board of Directors
+                %p Our board of directors has a wide variety of experience and expertise. Of our 10 members, six have significant experience in education and academics. We also have several board members with strong experience in finance, development, governance, and community relations.
                 .row
                     .span12
-                        %ul.thumbnails
-                            %li.span4
+                        %ul.thumbnails#board
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
-                                    .caption
-                                        %h4 John Alexander
-                                        %small Board Chair, Head of School, Groves Academy
-                            %li.span4
-                                .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
-                                    .caption
-                                        %h4 Chancey	Anderson
-                                        %small Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon
-                            %li.span4
-                                .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "http://placehold.it/175x200"}
                                     .caption
                                         %h4 Rick Campion
                                         %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "http://placehold.it/175x200"}
+                                    .caption
+                                        %h4 Chancey	Anderson
+                                        %small Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => "/assets/board/john_alexander.png"}
+                                    .caption
+                                        %h4 John Alexander
+                                        %small Board Chair, Head of School, Groves Academy
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => "/assets/board/kevin_cattoor.png"}
                                     .caption
                                         %h4 Kevin Cattoor
                                         %small Treasurer, Founder, KC Consulting
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "/assets/board/kerry_givens.png"}
                                     .caption
                                         %h4 Kerry Givens
                                         %small Executive Director, South Minneapolis YMCA
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "/assets/board/lidi_guzman.png"}
                                     .caption
                                         %h4 Lidibette Rosado-Guzm&aacute;n
-                                        %small Diversity Coordinator, World Language Teacher Benilde-St. Margaret’s School
-                            %li.span4
+                                        %small Diversity Coordinator, World Language Teacher
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "/assets/board/vidal_guzman.png"}
                                     .caption
                                         %h4 Vidal Guzm&aacute;n
                                         %small Senior Manager at Public Radio International
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "/assets/board/jill_johnson.png"}
                                     .caption
                                         %h4 Jill Johnson
                                         %small Board Secretary, Senior Business Analyst, Target
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "/assets/board/neda_kellogg.png"}
                                     .caption
                                         %h4 Neda Kellogg
                                         %small Founder and CEO, Project Diva
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
+                                    %img{:src => "/assets/board/tara_stone.png"}
                                     .caption
                                         %h4 Tara Stone
                                         %small Community and Church Liaison, North Minneapolis
+                        %p.center.lead
+                            Our Board meets at 7pm on the first Monday of every month at
+                            %i 3751 Sheridan Ave N.
