--- a/app/views/about/history.haml
+++ b/app/views/about/history.haml
@@ -1,30 +1,123 @@
 .container
     .row
-        .span4#panel-left
+        .span5#panel-left
             .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        .span8#panel-right
+                %h4
+                    Extensive Visits to High Performing
+                    %br
+                    Schools across the Country
+                %i Achievement First Network
+                %ul
+                    %li
+                        %small Amistad Academy, New Haven, CT
+                %i Building Excellent Schools
+                %ul
+                    %li
+                        %small Democracy Preparatory
+                %i Excel Academy Network
+                %ul
+                    %li
+                        %small Excel Academy East Boston, Boston, MA
+                    %li
+                        %small Excel Academy Chelsea, Boston, MA
+                %i Harlem Children’s Zone
+                %ul
+                    %li
+                        %small Promise Academy
+                    %li
+                        %small Harlem Gems
+                %i KIPP Network
+                %ul
+                    %li
+                        %small KIPP Infinity, West Harlem, NY
+                    %li
+                        %small KIPP Coastal Village, Houston, TX
+                    %li
+                        %small KIPP Explore Academy, Houston, TX
+                    %li
+                        %small KIPP Dream Prep, Houston, TX
+                    %li
+                        %small KIPP Sharp Prep, Houston, TX
+                    %li
+                        %small KIPP Courage, Houston, TX
+                    %li
+                        %small KIPP Academy Middle School, Houston TX
+                %i Match School Network
+                %ul
+                    %li
+                        %small Match Community Day School, Boston, MA
+                %i Noble Network1
+                %ul
+                    %li
+                        %small Pritzker Academy, Chicago, IL
+                    %li
+                        %small Chicago Bulls College Prep, Chicago, IL
+                %i Schools That Can
+                %ul
+                    %li
+                        %small Milwaukee College Preparatory, Milwaukee, WI
+                    %li
+                        %small Boston Collegiate Charter School, Boston, MA
+                    %li
+                        %small Edward Brooke East Boston, Boston, MA
+                    %li
+                        %small Edward Brooke Roslindale, Boston, MA
+                %i Uncommon Schools Network
+                %ul
+                    %li
+                        %small Leadership Prep Bedford Stuyvesant, Brooklyn, NY
+                    %li
+                        %small Leadership Prep Brownsville, Brooklyn, NY
+                    %li
+                        %small Leadership Prep Ocean Hill, Brooklyn, NY
+                    %li
+                        %small Excellence Boys Charter School, Brooklyn, NY
+                    %li
+                        %small North Star Academy, Newark, NJ
+                %i High Performing Public Schools
+                %ul
+                    %li
+                        %small Red Bank, NJ Public Schools
+                    %li
+                        %small Manhattan New School (PS 290), Manhattan, NY
+                    %li
+                        %small John Wayne Elementary (PS 380), Brooklyn, NY
+                    %li
+                        %small Zenith Academy, Houston, TX
+
+        .span7#panel-right
             .content
                 %h2 Our History
                 %p
-                    Prodeo Academy was founded in 2011. Its founders, Rick Campion and Chancey Anderson, travelled across the country to study schools that were achieving exceptional results in order to bring back to Minnesota practices that have been proven successful. As experienced educators, they know that success in the classroom is a combination of many powerful factors and they designed a school to address each of those factors. Having worked at all levels of education, they were able to see what preparation for college looks like at every grade level. Their goal was to provide a place where
-                    %i all families have the same platform for future success.
-                %p Prodeo Academy opens its doors in 2013 with 3 kindergarten classrooms. The projected growth pattern is to add a new kindergarten class of 66 students each year until capacity is reached, with grades K-8.
+                    %b Prodeo Academy was founded in 2011.
+                    Its founders, Rick Campion and Chancey Anderson recognized that in order for Prodeo Academy to be exceptionally successful, they needed to learn from the highest-performing schools in the country. Therefore, Rick Campion spent the past two years studying and completing internships in several such schools in order to bring best practices back to North Minneapolis. Chancey spent time teaching and writing curriculum for Uncommon Schools, one of the highest-performing networks in the country.
+                %p
+                    As experienced educators, they know that success in the classroom is a combination of many powerful factors and they designed a school to address each of those factors. Having worked at all levels of education, they were able to see what preparation for college looks like at every grade level. Their goal was to provide a place where
+                    %i all families have the same platform for future success. 
+                %p Prodeo Academy opens its doors in Fall 2013 with 3 kindergarten classrooms. The projected growth pattern is to add a new kindergarten class of 66 students each year until capacity is reached, with grades K-8.
                 %p.lead The unique foundations of Prodeo Academy:
-                %ul
+                %ul.unstyled
                     %li
-                        %b Careful planning:
+                        %span.lead
+                            %b Careful planning:
                         Prodeo Academy's leaders spent two years doing careful planning, visiting, completing internships, teaching in the highest performing charter schools across the country, as well as building relationships throughout North Minneapolis and the broader community.
+                    %br
                     %li
-                        %b Best practices:
+                        %span.lead
+                            %b Best practices:
                         Prodeo Academy uses the most effective, proven methods of teaching available. We have the freedom to implement only what works – no excuses.
+                    %br
                     %li
-                        %b Partnerships:
-                        Prodeo Academy is designed with the partnership and support of a diverse array of collaborators and advisors, from pre-schools to churches to universities. (eventually add hyperlink to list of advisors, partners here)
+                        %span.lead
+                            %b Partnerships:
+                        Prodeo Academy is designed with the partnership and support of a diverse array of collaborators and advisors, from pre-schools to churches to universities.
+                    %br
                     %li
-                        %b Achievement gap:
-                        The founders of Prodeo Academy are inspired to demonstrate that the achievement gap in Minneapolis does not have to be permanent. Every child, no matter what his or her income level, should have an education that provides him or her to truly succeed. They created a school in North Minneapolis that expects results from its students, teachers and families.
+                        %span.lead
+                            %b Achievement gap:
+                        The founders of Prodeo Academy are inspired to demonstrate that the achievement gap in Minneapolis does not have to be permanent. All children, no matter what their income level, should have have an education that enables them to truly succeed. Therefore, the founders created a school in North Minneapolis that expects results from its students, teachers and families.
+                    %br
                     %li
-                        %b Excellent teaching:
+                        %span.lead
+                            %b Excellent teaching:
                         Knowing that high quality teaching is the most important factor in reducing the achievement gap, Prodeo Academy aims to hire only teachers with experience in the highest performing schools, teachers who clearly understand how to help kids reach their academic potential.
