--- a/app/views/about/who_we_are.haml
+++ b/app/views/about/who_we_are.haml
@@ -2,12 +2,20 @@
     .row
         .span4#panel-left
             .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                %h3 Want to know more?
+                %p.lead We invite you to learn more about this vital community.
+                %p
+                    %b Contact Rick Campion, Executive Director
+                %p rickcampion@prodeoacademy.org
+                %p (612) 559-4881
         .span8#panel-right
             .content
                 %h2 Who We Are
-                %p.lead Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values: Knowledge, Conscientiousness, Compassion, Integrity, and Respect.
+                %p.lead
+                    Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values:
+                    %b Knowledge, Conscientiousness, Compassion, Integrity,
+                    and
+                    %b Respect.
                 %img.pull-right{:src => "http://placehold.it/350x125"}
                 %p Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.
                 %img.pull-left{:src => "http://placehold.it/250x100"}
