--- a/app/views/approach/core_values.haml
+++ b/app/views/approach/core_values.haml
@@ -1,18 +1,21 @@
 .container
     .row
-        .span4#panel-left
-            .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        .span8#panel-right
+        .span12#panel-main
             .content
                 %h2 Our Core Values
-                %p.lead In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.
-                %p It is extremely important to prepare our students for success in school, as well as in their personal and future professional life. Building a foundation together with families, Prodeo Academy students and staff honor and embrace a learning environment founded upon five core values.
-                %p.lead These five values will inform and inspire everything we do at Prodeo Academy.
-                %ul
-                    %li.lead Knowledge
-                    %li.lead Conscientiousness
-                    %li.lead Compassion
-                    %li.lead Integrity
-                    %li.lead Respect
+                .row
+                    .span3
+                        %blockquote.lead Knowledge
+                        %blockquote.lead Conscientiousness
+                        %blockquote.lead Respect
+                        %blockquote.lead Compassion
+                        %blockquote.lead Integrity
+                    .span9
+                        %br
+                        %br
+                        %p.lead.center
+                            These five values will inform and inspire
+                            %br everything we do at Prodeo Academy.
+                        %br
+                        %p In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.
+                        %p It is extremely important to prepare our students for success in school, as well as in their personal and future professional life. Building a foundation together with families, Prodeo Academy students and staff honor and embrace a learning environment founded upon five core values.
