--- a/app/views/approach/family_partnership.haml
+++ b/app/views/approach/family_partnership.haml
@@ -2,13 +2,16 @@
     .row
         .span4#panel-left
             .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                %h3 Title?
+                %img{:src => "//placehold.it/275x175"}
+                %br
+                %br
+                %img{:src => "//placehold.it/275x75"}
         .span8#panel-right
             .content
                 %h2 Family Partnerships
                 %p.lead Family support is critical to a child's success in school.
-                %p At Prodeo Academy we understand that we work in collaboration with families; we welcome every Prodeo Academy family to be an active participant in the school community.
+                %p At Prodeo Academy we understand that we work in collaboration with families; we welcome every Prodeo Academy family to be an active participant in our school community.
                 %p.lead Our commitment to families:
                 %p The high standards we set for our students are matched by the high standards we set for our staff. We are passionate about the high quality teachers we have hired who will provide your child with the tools to be successful.
                 %p Our staff will be easily accessible to families, whether a student has a question about homework or a parent simply wants to reach out to the teacher.
